test/classes/lydia/queryNonAggregateType.good
queryNonAggregateType.chpl:2: error: Attempted to obtain field of a type that was not a record or class
