test/classes/lydia/queryNonAggregateType.chpl
type t = bool;
var foo = __primitive("query param field", t, "foo");
writeln(foo);
